--- a/src/main/resources/org/echocat/adam/administration/AdministrationAction.vm
+++ b/src/main/resources/org/echocat/adam/administration/AdministrationAction.vm
@@ -48,10 +48,18 @@
                 </div>
             </fieldset>
         #end
+        #if ($action.synchronizationRequested and !$action.hasFieldErrors())
+            <fieldset>
+                <div class="field-group success">
+                    $!{i18n.getText("org.echocat.adam.synchronizationTriggerdMessage")}
+                </div>
+            </fieldset>
+        #end
         <div class="buttons-container">
             <div class="buttons">
                 <input type="submit" name="save" class="aui-button submit" value="${generalUtil.escapeForHtmlAttribute($i18n.getText("save.name"))}">
                 <input type="submit" name="validate" class="aui-button submit" value="${generalUtil.escapeForHtmlAttribute($i18n.getText("org.echocat.adam.validateConfiguration.label"))}">
+                <input type="submit" name="saveAndSynchronizationNow" class="aui-button submit" value="${generalUtil.escapeForHtmlAttribute($i18n.getText("org.echocat.adam.saveAndSynchronizationNow.label"))}">
                 <input type="submit" name="reset" class="aui-button-link aui-button submit" value="${generalUtil.escapeForHtmlAttribute($i18n.getText("org.echocat.adam.reset.label"))}">
             </div>
         </div>
