--- a/src/main/resources/org/echocat/adam/profile/element/ElementRenderer.wikiMarkup.view.xhtml.vm
+++ b/src/main/resources/org/echocat/adam/profile/element/ElementRenderer.wikiMarkup.view.xhtml.vm
@@ -1,3 +1,3 @@
 #if($!value != $!null)
-    <span class="field-value" id="${nodeId}">$!{wikiStyleRenderer.convertWikiToXHtml($renderContext, $value)}</span>
+    <span class="field-value" id="${nodeId}">$!{wikiStyleRenderer.convertWikiToXHtml($pageContext, $value)}</span>
 #end
