* #53: Make Adam compatible with Confluence 5.9+ * Do some cleanup issues

--- a/src/main/resources/org/echocat/adam/convoyed/edituser.vm
+++ b/src/main/resources/org/echocat/adam/convoyed/edituser.vm
@@ -25,7 +25,7 @@
                             #end
                         </fieldset>
                     #else
-                        #tag( "Hidden" "name='username'" "size='50'" "value='$!action.user.name'" )
+                        #tag( "Hidden" "name='username'" "value='$!action.user.name'" )
                     #end
 
                     #tag( "Submit" "theme='aui'" )
